# sistDist

./: .gitignore  CMakeLists.txt  GetTimeMs64.cpp  GetTimeMs64.h  README.md  main.cpp  pipes.c  recvsig.c  recvsock.c  sendsig.c  sendsock.c
parte1/: pipes.c  recvsock.c
parte2/: GetTimeMs64.c  GetTimeMs64.h  semaphores.c  spinlock.c
parte3/: CMakeLists.txt  Networker.cpp  Networker.h  main.cpp
